# Tiktok-heart

./: .env.example  .gitattributes  .gitignore  BUILD_INFO.json  LICENSE  README.md  auth_flow.py  config.py  desktop_app.py  diagnostics_app.py  launcher.py  message_pool.txt  package-lock.json  package.json  project_adapter.py  pytest.ini  requirements-desktop.txt  requirements.txt  run_bot.bat  run_telegram_bot_background.bat  runtime_paths.py  start_app.bat  start_app.vbs  start_bot.bat  telegram_control_bot.py  tiktok_checker.py  tiktok_messenger.py  tray_support.py
app_shell/: server.py
control/: control_state.example.json  profiles.example.json  telegram_bot_v2.example.json  ui_state.example.json
docs/: SETUP.md
scripts/: security_scan.py  start_worker_once.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: conftest.py  test_app_shell_server.py  test_auth_coordination.py  test_chrome_import_filter.py  test_command_parser.py  test_config_cli_profile.py  test_control_store.py  test_diagnostics_ui_helpers.py  test_dispatch_service.py  test_health_report.py  test_launcher_runtime.py  test_log_paths.py  test_message_pool.py  test_process_controls.py  test_project_adapter_diagnostics_rich.py  test_project_adapter_legacy_rendering.py  test_project_adapter_v2.py  test_project_backups.py  test_psutil_process_control.py  test_run_history.py  test_runtime_recovery.py  test_single_instance.py  test_state_store.py  test_target_state_tools.py  test_telegram_locking.py  test_tiktok_messenger.py  test_tray_support.py  (+2 more)
ttbot/: dispatch.py  (+1 more)
(+35 files in other folders)
