[package]
name = "yara-control"
version = "2.1.0"
description = "TikTok Heart desktop shell"
authors = ["Yara"]
edition = "2021"

[lib]
name = "yara_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0.95"
tauri = { version = "2.10.3", features = [] }
url = "2.5.4"
